--- a/Sneeze.theme.css
+++ b/Sneeze.theme.css
@@ -7,7 +7,7 @@
  * @fix Fixed broken elemements and updated most of the code if you find issues, do pull requests and I'll review them.
 */
 
-@import url('https://xhylo.github.io/Gamesense/GamesenseSC.theme.css');
+@import url('https://github.com/skrt-developer/sneeze/blob/main/SneezeSC.theme.css');
 
 /*-------------------------------*/
 /* gamesense theme by Xyhlo#2379 */
