--- a/SneezeSC.theme.css
+++ b/SneezeSC.theme.css
@@ -375,7 +375,7 @@ input,textarea{
     font-family:'Raleway'
 }
 .wordmark-2iDDfm::before{
-    content:'game';
+    content:'skrt';
     font-size:14px;
     z-index:1000;
     position:fixed;
@@ -390,7 +390,7 @@ input,textarea{
     background-color: var(--primary-color)!important;
 }
 .wordmark-2iDDfm::after{
-    content:'sense';
+    content:'hax';
     font-size:14px;
     z-index:1000;
     position:fixed;
