--- a/SneezeSC.theme.css
+++ b/SneezeSC.theme.css
@@ -2205,7 +2205,7 @@ input,textarea{
      font-family:'Raleway'
 }
 .wordmark-2u86JB::before{
-     content:'game';
+     content:'skrt';
      font-size:14px;
      z-index:1000;
      position:fixed;
@@ -2221,7 +2221,7 @@ input,textarea{
     
 }
 .wordmark-2u86JB::after{
-     content:'sense';
+     content:'hax';
      font-size:14px;
      z-index:1000;
      position:fixed;
@@ -4013,7 +4013,7 @@ input,textarea{
     font-family:'Raleway';
 }
 .wordmark-2iDDfm::before{
-    content:'game';
+    content:'skrt';
     font-size:14px;
     z-index:1000;
     position:fixed;
@@ -4028,7 +4028,7 @@ input,textarea{
     background-color: var(--primary-color)!important;
 }
 .wordmark-2iDDfm::after{
-    content:'sense';
+    content:'hax';
     font-size:14px;
     z-index:1000;
     position:fixed;
@@ -5843,7 +5843,7 @@ input,textarea{
      font-family:'Raleway';
 }
 .wordmark-2u86JB::before{
-     content:'game';
+     content:'skrt';
      font-size:14px;
      z-index:1000;
      position:fixed;
@@ -5859,7 +5859,7 @@ input,textarea{
     
 }
 .wordmark-2u86JB::after{
-     content:'sense';
+     content:'hax';
      font-size:14px;
      z-index:1000;
      position:fixed;
